--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -67,3 +67,9 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+
+# FOS
+fos_user:
+    db_driver: orm
+    firewall_name: main
+    user_class: Web\Bundle\UserBundle\Entity\User
