--- a/src/Web/Bundle/UserBundle/Resources/config/services.yml
+++ b/src/Web/Bundle/UserBundle/Resources/config/services.yml
@@ -7,3 +7,9 @@ services:
         arguments: [@security.context, @doctrine.orm.entity_manager, %web_user.interval%]
         tags:
             - { name: kernel.event_listener, event: kernel.controller, method: onController }
+
+    web_user.form.type.invite:
+        class: Web\Bundle\UserBundle\Form\Type\UserType
+        arguments: [@doctrine.orm.entity_manager]
+        tags:
+            - { name: form.type, alias: user }
